tests/snapshots/test_display_paths__delete_work_dry_run_display_path.snap
---
source: tests/test_display_paths.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work delete WI-<DATE>-001 --dry-run
[DRY RUN] Would delete: gov/work/<DATE>-test-work.toml
exit: 0
