tests/snapshots/test_display_paths__render_adr_display_path.snap
---
source: tests/test_display_paths.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl adr render ADR-0001 --dry-run
Would write: docs/adr/ADR-0001.md
--- Content preview ---
<!-- GENERATED: do not edit. Source: ADR-0001 -->
<!-- SIGNATURE: sha256:<HASH> -->

# ADR-0001: Test Decision

> **Status:** proposed | **Date:** 2026-01-01

## Context

Test context

## Decision

Test decision

...
exit: 0
