tests/snapshots/test_display_paths__render_adr_missing_returns_scope_context.snap
---
source: tests/test_display_paths.rs
assertion_line: 159
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl adr render ADR-9999
No ADRs found
exit: 0
