tests/snapshots/test_display_paths__render_rfc_display_path.snap
---
source: tests/test_display_paths.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc render RFC-0001 --dry-run
Would write: docs/rfc/RFC-0001.md
--- Content preview ---
<!-- GENERATED: do not edit. Source: RFC-0001 -->
<!-- SIGNATURE: sha256:<HASH> -->

# RFC-0001: Test RFC

> **Version:** 0.1.0 | **Status:** draft | **Phase:** spec
> **Owners:** test@example.com

---

## 1. Specification

### [RFC-0001:C-TEST] Test Clause (Normative) <a id="rfc-0001c-test"></a>

Test clause content.

---

## Changelog

...
exit: 0
