tests/snapshots/test_display_paths__render_rfc_missing_returns_scope_context.snap
---
source: tests/test_display_paths.rs
assertion_line: 150
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc render RFC-9999
No RFCs found in <TEMPDIR>/gov/rfc
exit: 0
