tests/snapshots/test_display_paths__render_work_display_path.snap
---
source: tests/test_display_paths.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work render WI-<DATE>-001 --dry-run
Would write: docs/work/WI-<DATE>-001.md
--- Content preview ---
<!-- GENERATED: do not edit. Source: WI-<DATE>-001 -->
<!-- SIGNATURE: sha256:77cba937dcfbc7e5d9125d64e477feb0b5d6d9eee8c65503700a1d1b23ae3dda -->

# Test Work

> **ID:** WI-<DATE>-001 | **Status:** active | **Started:** <DATE>

## Description

Test description
...
exit: 0
