tests/snapshots/test_display_paths__rfc_new_dry_run_display_path.snap
---
source: tests/test_display_paths.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl rfc new New RFC --dry-run
Would create dir: gov/rfc/RFC-0001/clauses
Would write: gov/rfc/RFC-0001/rfc.json
  {
    "rfc_id": "RFC-0001",
    "title": "New RFC",
    "version": "0.1.0",
    "status": "draft",
    "phase": "spec",
    "owners": [
      "@test-user"
    ],
    "created": "<DATE>",
    "sections": [
      {
        "title": "Summary"
      },
      {
        "title": "Specification"
      }
    ],
    "changelog": [
      {
  ...
exit: 0
