tests/snapshots/test_display_paths__rfc_set_dry_run_display_path.snap
---
source: tests/display_path_tests/edit.rs
expression: value
---
$ govctl rfc edit RFC-0001 title --set Updated Title --dry-run
Would write: gov/rfc/RFC-0001/rfc.toml
  #:schema ../../schema/rfc.schema.json
  
  [govctl]
  id = "RFC-0001"
  title = "Updated Title"
  version = "0.1.0"
  status = "draft"
  phase = "spec"
  owners = ["test@example.com"]
  created = "2026-01-01"
  updated = "<DATE>"
  
  [[sections]]
  title = "Specification"
  
  [[changelog]]
  version = "0.1.0"
  date = "2026-01-01"
  notes = "Initial draft"
exit: 0
