tests/snapshots/test_display_paths__work_new_dry_run_display_path.snap
---
source: tests/test_display_paths.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl work new New Work --dry-run
Would create dir: gov/work
Would write: gov/work/<DATE>-new-work.toml
  #:schema ../schema/work.schema.json
  
  [govctl]
  id = "WI-<DATE>-001"
  title = "New Work"
  status = "queue"
  created = "<DATE>"
  
  [content]
  description = """
  Describe the work to be done.
  What is the goal? What are the acceptance criteria?"""
exit: 0
